Fix diversity alignment

--- a/_sass/cft.sass
+++ b/_sass/cft.sass
@@ -17,3 +17,11 @@
     
     .text-content
         padding: 0em, 6em
+
+    .call-for-talks
+        align-items: center
+        display: flex
+        flex-flow: column
+        @media only screen and (max-width: 634px)
+            padding: 0 2em 2em 2em
+
