--- a/_sass/diversity.sass
+++ b/_sass/diversity.sass
@@ -4,8 +4,12 @@
     // background-image: url('{{site.baseurl}}/assets/images/background-gradient.jpg')
     color: #fff
     padding: 6em, 8em
+    justify-content: center
+    align-items: center
+    display: flex
+    padding: 2.8em 5em
+    flex-direction: column
     
-
     .title
         color: #ffffff
     .section-text
@@ -17,7 +21,6 @@
         font-weight: bold
     
     .text-content
+        display: flex
         padding: 0.5em 3em
 
-    a
-        
