--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -402,13 +402,6 @@ a
   border-bottom: 1px solid
   border-left: 1px solid
 
-.call-for-talks
-  align-items: center
-  display: flex
-  flex-flow: column
-  @media only screen and (max-width: 634px)
-    padding: 0 2em 2em 2em
-
 .column
   float: left
   width: 25%
